implement parking admin swagger
