# io/rest/swagger.yaml
@@ -17,6 +17,110 @@ definitions:
             - password
         type: object
         x-go-package: github.com/farazff/IoT-parking/io/rest/sw
+    ParkingAdminCreate:
+        properties:
+            enabled:
+                type: boolean
+                x-go-name: Enabled
+            first_name:
+                type: string
+                x-go-name: FirstName
+            id:
+                format: int64
+                type: integer
+                x-go-name: ID
+            last_name:
+                type: string
+                x-go-name: LastName
+            parking_id:
+                format: int64
+                type: integer
+                x-go-name: ParkingID
+            phone:
+                type: string
+                x-go-name: Phone
+        type: object
+        x-go-package: github.com/farazff/IoT-parking/io/rest/sw
+    ParkingAdminCreator:
+        properties:
+            enabled:
+                type: boolean
+                x-go-name: Enabled
+            first_name:
+                type: string
+                x-go-name: FirstName
+            last_name:
+                type: string
+                x-go-name: LastName
+            parking_id:
+                format: int64
+                type: integer
+                x-go-name: ParkingID
+            password:
+                type: string
+                x-go-name: Password
+            phone:
+                type: string
+                x-go-name: Phone
+        required:
+            - first_name
+            - last_name
+            - phone
+            - enabled
+            - password
+            - parking_id
+        type: object
+        x-go-package: github.com/farazff/IoT-parking/io/rest/sw
+    ParkingAdminGet:
+        properties:
+            enabled:
+                type: boolean
+                x-go-name: Enabled
+            first_name:
+                type: string
+                x-go-name: FirstName
+            id:
+                format: int64
+                type: integer
+                x-go-name: ID
+            last_name:
+                type: string
+                x-go-name: LastName
+            parking_id:
+                format: int64
+                type: integer
+                x-go-name: ParkingID
+            phone:
+                type: string
+                x-go-name: Phone
+        type: object
+        x-go-package: github.com/farazff/IoT-parking/io/rest/sw
+    ParkingAdminUpdater:
+        properties:
+            enabled:
+                type: boolean
+                x-go-name: Enabled
+            first_name:
+                type: string
+                x-go-name: FirstName
+            last_name:
+                type: string
+                x-go-name: LastName
+            parking_id:
+                format: int64
+                type: integer
+                x-go-name: ParkingID
+            phone:
+                type: string
+                x-go-name: Phone
+        required:
+            - first_name
+            - last_name
+            - phone
+            - enabled
+            - parking_id
+        type: object
+        x-go-package: github.com/farazff/IoT-parking/io/rest/sw
     ParkingCreate:
         properties:
             address:
@@ -219,7 +323,7 @@ paths:
                   type: integer
             responses:
                 "200":
-                    $ref: '#/responses/ErorMessgae'
+                    $ref: '#/responses/ErrorMessage'
                 "400":
                     $ref: '#/responses/ErrorMessage'
                 "401":
@@ -260,7 +364,7 @@ paths:
                     $ref: '#/responses/ErrorUnauthorizedMessage'
                 "500":
                     $ref: '#/responses/ErrorMessage'
-            summary: This route is used to get a single parking by id
+            summary: This route is used to get a single parking by ID
             tags:
                 - System_Admin
         put:
@@ -303,6 +407,112 @@ paths:
             summary: This route is used to update a parking
             tags:
                 - System_Admin
+    /v1/parkingAdmin:
+        post:
+            operationId: createParkingAdmin
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+                - in: body
+                  name: ParkingAdminCreator
+                  required: true
+                  schema:
+                    $ref: '#/definitions/ParkingAdminCreator'
+            responses:
+                "201":
+                    $ref: '#/responses/ParkingAdminCreateRes'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used to create parking admin
+            tags:
+                - Parking_Admin
+    /v1/parkingAdmin/{id}:
+        get:
+            operationId: getParkingAdmin
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+                - format: int64
+                  in: path
+                  name: ID
+                  required: true
+                  type: integer
+            responses:
+                "200":
+                    $ref: '#/responses/ParkingAdminGetRes'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used to get a single parking admin by ID
+            tags:
+                - Parking_Admin
+        put:
+            operationId: updateParkingAdmin
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+                - format: int64
+                  in: path
+                  name: ID
+                  required: true
+                  type: integer
+                - in: body
+                  name: parkingUpdater
+                  required: true
+                  schema:
+                    $ref: '#/definitions/ParkingAdminUpdater'
+                  x-go-name: ParkingAdminUpdater
+            responses:
+                "201":
+                    $ref: '#/responses/ParkingAdminUpdateRes'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "404":
+                    $ref: '#/responses/ErrorMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used to update a parking admin
+            tags:
+                - Parking_Admin
     /v1/parkingAdmin/signIn:
         post:
             operationId: parkingAdminSingIn
@@ -326,6 +536,69 @@ paths:
                 "500":
                     $ref: '#/responses/ErrorUnauthorizedMessage'
             summary: This route is used by parking admin to sign in.
+            tags:
+                - Parking_Admin
+    /v1/parkingAdmins:
+        get:
+            operationId: getParkingAdmins
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+            responses:
+                "200":
+                    $ref: '#/responses/ParkingAdminsGetRes'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used to get all parking admins
+            tags:
+                - Parking_Admin
+    /v1/parkingAdmins/{id}:
+        delete:
+            operationId: deleteParkingAdmin
+            parameters:
+                - description: api key for APIs
+                  in: header
+                  name: api-key
+                  required: true
+                  type: string
+                  x-go-name: ApiKey
+                - description: Session token
+                  in: header
+                  name: session_token
+                  required: true
+                  type: string
+                  x-go-name: SessionToken
+                - format: int64
+                  in: path
+                  name: ID
+                  required: true
+                  type: integer
+            responses:
+                "200":
+                    $ref: '#/responses/ErrorMessage'
+                "400":
+                    $ref: '#/responses/ErrorMessage'
+                "401":
+                    $ref: '#/responses/ErrorUnauthorizedMessage'
+                "404":
+                    $ref: '#/responses/ErrorMessage'
+                "500":
+                    $ref: '#/responses/ErrorMessage'
+            summary: This route is used to delete a parking admin by ID
             tags:
                 - Parking_Admin
     /v1/parkings:
@@ -437,7 +710,7 @@ responses:
     ErrorMessage:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
@@ -459,15 +732,52 @@ responses:
     NoContent:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
             type: object
+    ParkingAdminCreateRes:
+        description: ""
+        headers:
+            session_token:
+                description: 'in: cookie'
+                type: string
+        schema:
+            properties:
+                parking_admin:
+                    $ref: '#/definitions/ParkingAdminCreate'
+            type: object
+    ParkingAdminGetRes:
+        description: ""
+        headers:
+            session_token:
+                description: 'in: cookie'
+                type: string
+        schema:
+            properties:
+                parking_admin:
+                    $ref: '#/definitions/ParkingAdminGet'
+            type: object
+    ParkingAdminsGetRes:
+        description: ""
+        headers:
+            session_token:
+                description: 'in: cookie'
+                type: string
+        schema:
+            properties:
+                parking_admins:
+                    description: parking res
+                    items:
+                        $ref: '#/definitions/ParkingAdminGet'
+                    type: array
+                    x-go-name: ParkingAdminGet
+            type: object
     ParkingCreateRes:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
@@ -478,7 +788,7 @@ responses:
     ParkingGetRes:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
@@ -489,7 +799,7 @@ responses:
     ParkingUpdateRes:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
@@ -504,7 +814,7 @@ responses:
     ParkingsGetRes:
         description: ""
         headers:
-            SessionToken:
+            session_token:
                 description: 'in: cookie'
                 type: string
         schema:
